--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-cloud-bigquery
 google-cloud-storage
 db-dtypes
 pyarrow
+tensorflow
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, AR>tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-ch>tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel >tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 # prevent bq 3+ db-dtypes package error when running training from bq
